2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add and distribute test/OK.

	* OK: New file.
	* Makefile.am (EXTRA_DIST): Add OK.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Make runtest sanity-check more robust.

	* runtest.in: Don't look for '${prefix}' in ‘@GUILE_LIBSITE@’;
	instead, resolve the dir, whether from env or substitution,
	and check sanity of the result.

2011-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Avoid ‘return-it’.

	* basic.scm (test:request-cancel): Rephrase w/o ‘return-it’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't chmod +x test/{runtest,show-platform}.

	* Makefile.am (TESTS_ENVIRONMENT): Invoke w/ sh(1).
	* show-platform.in: Update usage comment; nfc.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use $srcdir in runtest.

	* runtest.in (ts): Delete var;
	in Guile invocation, use ‘$srcdir’ directly.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Don't "manually load" anything.

	* meta.scm: Don't ‘manually-load’ any Guile-PG modules.
	* types-table.scm: Likewise.
	* testing.scm (manually-load): Delete proc.
	* runtest.in (tscm): Delete var.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Instantiate test/show-platform at configure-time.

	* show-platform.in: New file.
	* show-platform: Delete file.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Make partial install depend on ../src "make all".

	Omission from 2011-05-14, "Do a partial
	install under test/; point ‘%load-path’ there".

	* Makefile.am (fake-install): Depend on ../src/stamp-all;
	also, delete any previous tree before starting.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build inst] Add support for "no C module" mode.

	* Makefile.am (fake-install): For sub-"make install",
	set makefile variable ‘FOR_MAKE_CHECK’.

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do a partial install under test/; point ‘%load-path’ there.

	* Makefile.am (check_DATA): New var.